# euler

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  task1.py  task3.py  task4.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py
src/euler/: __init__.py  task1.py  task2.py  task3.py  task4.py  task5.py
tests/: __init__.py  euler_test.py  task3_test.py  task4_test.py  test_euler.py  test_task1.py  test_task2.py  test_task4.py  test_task5.py
