[tool.poetry]
name = "euler"
version = "0.1.0"
description = "Problems from the Project Euler Archive"
authors = ["Tobias Kuppens Groot <tkuppensgroo@uos.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
black = {git = "https://github.com/ambv/black"}
flake8 = "^3.7"
flake8-docstrings = "^1.3"
pre-commit = "^1.16"
pre-commit-hooks = "^2.2"
typed-ast = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
